[fix]: Fix JWT secret key(#3)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,5 +16,4 @@ spring:
 #    producer:
 #      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 token:
-  secret: secretKeyHere
-  expiration: 1000
+  secret: SecretKeyHereSecretKeyHereSecretKeyHereSecretKeyHere
