--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
 #      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 token:
   secret: SecretKeyHereSecretKeyHereSecretKeyHereSecretKeyHere
+address:
+  payment: http://192.168.0.10:8080
+  front: http://192.168.0.16:8000
