--- a/src/main/resources/application-depl.yml
+++ b/src/main/resources/application-depl.yml
@@ -12,7 +12,7 @@ spring:
       ddl-auto: update
     show-sql: true
   kafka:
-    bootstrap-servers: ${kafkaServer} # 192.168.0.20:9092
+    bootstrap-servers: ${kafkaServer}
     producer:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 token:
